# pyrodigy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: deploy_pypi.yml
app/: gan.py
config/: a2grad_config.py  adabelief_config.py  adabound_config.py  config_utils.py
docs/: a2grad.md  adabelief.md  adabound.md  conf.py  config_utils.rst  configs.rst  index.rst  installation.rst  intro.rst  opt_index.rst  source_code.rst  usage.rst
notebooks/: 3xvae.ipynb  gansimple.ipynb  vae.ipynb
pyrodigy/: __init__.py  cli.py  gan.py  gansimple.ipynb  optimizer_wrapper.py
safe_optimizer/: adabelief_plus.py
tests/: test_cli.py  test_gan.ipynb  test_wrapper.py  testgan2.ipynb  testgan3.ipynb
torch/: __init__.py  adabelief_plus.py
