[tool.poetry]
name = "pyrodigy"
version = "0.2.8"
description = "No more excuses for bad models. >70 Optimizers. All explained. All pre-configured."
authors = ["Pyro <pyros.sd.models@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/pyros-sd-models/pyrodigy"
readme = "README.md"

[tool.poetry.scripts]
pyrodigy = "pyrodigy.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "*"
rich = "*"
art = "^6.3"
torch = [
    { version = "2.4.0", markers = "platform_system == 'Darwin'", source = "pypi" },
    { version = "2.4.0", markers = "platform_system == 'Windows'", source = "torch" },
]
torchvision = [
    { version = "0.19.0", markers = "platform_system == 'Darwin'", source = "pypi" },
    { version = "0.19.0", markers = "platform_system == 'Windows'", source = "torch" },
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.group.docs.dependencies]
sphinx = "*"
furo = "*"
myst-parser = "*"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E203", "E266", "E501"]
exclude = ["logs/", "data/", "tests/", "docs/"]
